--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -1,5 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.css";
-@import "~font-awesome/css/font-awesome.css";
+/* @import "~font-awesome/css/font-awesome.css"; */
+@import "~@fortawesome/fontawesome-free/css/fontawesome.min.css";
 @import "~@ng-select/ng-select/themes/default.theme.css";
 /* @import "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.2/css/bootstrap3/bootstrap-switch.css"; */
 
