--- a/angular/src/app/newQA/newQA.component.html
+++ b/angular/src/app/newQA/newQA.component.html
@@ -82,184 +82,37 @@
         </div>
       </div>
       <hr>
-      <h4>Affirmative questions</h4>
-      <div class="row affirmative">
-        <div class="col-md-12">
-          <div class="row question">
-            <div class="question-number offset-sm-1 col-sm-1 col-1">
-              1.
-            </div>
-            <div class="col-sm-6 col-7 question-text">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">Was the dispatch to en route time less than six (6) minutes and dispatch to on-scene time less than 10 minutes?</label>
+      <div *ngFor="let cat of qs">
+        <h4>{{cat.name}}</h4>
+        <div class="row affirmative">
+          <div class="col-md-12">
+            <div class="row question" *ngFor="let q of cat.questions; index as i">
+              <div class="question-number offset-sm-1 col-sm-1 col-1">
+                {{i+1}}.
               </div>
-            </div>
-            <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn1" [(ngModel)]="qa.yn1">
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="1"> Yes
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="0"> No
-                </label>
+              <div class="col-sm-6 col-7 question-text">
+                <div class="form-check form-check-inline">
+                  <label class="form-check-label">{{q.text}}</label>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="row question">
-            <div class="question-number offset-sm-1 col-sm-1 col-1">
-              2.
-            </div>
-            <div class="col-sm-6 col-7 question-text">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">Was the chief complaint explicitly recorded?</label>
-              </div>
-            </div>
-            <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn2" [(ngModel)]="qa.yn2">
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="1"> Yes
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="0"> No
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="row question">
-            <div class="question-number offset-sm-1 col-sm-1 col-1">
-              3.
-            </div>
-            <div class="col-sm-6 col-7 question-text">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">If EtOH+, EDP, or AMS patient, was glucometry performed?</label>
-              </div>
-            </div>
-            <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn3" [(ngModel)]="qa.yn3">
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="1"> Yes
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="0"> No
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="2"> N/A
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="row question">
-            <div class="question-number offset-sm-1 col-sm-1 col-1">
-              4.
-            </div>
-            <div class="col-sm-6 col-7 question-text">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">Was the disposition appropriate?</label>
-              </div>
-            </div>
-            <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn4" [(ngModel)]="qa.yn4">
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="1"> Yes
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="0"> No
-                </label>
+              <div class="col-sm-2 col-4 question-answer">
+                <div [ngSwitch]="q.displayNA" class="btn-group btn-group-toggle" ngbRadioGroup name="yn1" [(ngModel)]="qa.yn1">
+                  <label ngbButtonLabel class="btn-secondary">
+                    <input ngbButton type="radio" [value]="1"> Yes
+                  </label>
+                  <label ngbButtonLabel class="btn-secondary">
+                    <input ngbButton type="radio" [value]="0"> No
+                  </label>
+                  <label *ngSwitchCase="1" ngbButtonLabel class="btn-secondary">
+                    <input ngbButton type="radio" [value]="0"> N/A
+                  </label>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <h4>Negative questions</h4>
-      <div class="row negative">
-        <div class="col-md-12">
-          <div class="row question">
-            <div class="question-number offset-sm-1 col-sm-1 col-1">
-              5.
-            </div>
-            <div class="col-sm-6 col-7 question-text">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">Were there any exposures?</label>
-              </div>
-            </div>
-            <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn5" [(ngModel)]="qa.yn5">
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="1"> Yes
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="0"> No
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="row question">
-            <div class="question-number offset-sm-1 col-sm-1 col-1">
-              6.
-            </div>
-            <div class="col-sm-6 col-7 question-text">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">Was a REMO MD contacted?</label>
-              </div>
-            </div>
-            <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn6" [(ngModel)]="qa.yn6">
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="1"> Yes
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="0"> No
-                </label>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <h4>REMO specialty QI</h4>
-      <div class="row remo-specialty">
-        <div class="col-md-12">
-          <div class="row question">
-            <div class="question-number offset-sm-1 col-sm-1 col-1">
-              7.
-            </div>
-            <div class="col-sm-6 col-7 question-text">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">Was naloxone, albuterol, or epinephrine	administered?</label>
-              </div>
-            </div>
-            <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn7" [(ngModel)]="qa.yn7">
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="1"> Yes
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="0"> No
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="row question">
-            <div class="question-number offset-sm-1 col-sm-1 col-1">
-              8.
-            </div>
-            <div class="col-sm-6 col-7 question-text">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">Was a patella reduction performed or public defibrillation used?</label>
-              </div>
-            </div>
-            <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn8" [(ngModel)]="qa.yn8">
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="1"> Yes
-                </label>
-                <label ngbButtonLabel class="btn-secondary">
-                  <input ngbButton type="radio" [value]="0"> No
-                </label>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
       <hr>
       <h4>Review</h4>
       <div class="row review">
