--- a/angular/src/app/newQA/newQA.component.html
+++ b/angular/src/app/newQA/newQA.component.html
@@ -38,10 +38,11 @@
               name="qa_tic"
               [items]="ccs"
               bindLabel="first_last"
+              bindValue="user_id"
               [(ngModel)]="qa.tic">
             </ng-select>
         </div>
-        <div class="form-group col-md-2">
+        <!-- <div class="form-group col-md-2">
           <label for="900number">900 number</label>
           <ng-select
             name="qa_tic"
@@ -49,7 +50,7 @@
             bindLabel="ninehundred"
             [(ngModel)]="qa.tic">
           </ng-select>
-        </div>
+        </div> -->
         <div class="form-group col-md-3">
           <label for="typeahead-focus">Preceptor:</label>
           <ng-select
@@ -61,7 +62,7 @@
             >
           </ng-select>
         </div>
-        <div class="form-group col-md-2">
+        <!-- <div class="form-group col-md-2">
           <label for="preceptor900number">900 number</label>
           <ng-select
             name="qa_prec_nine"
@@ -71,7 +72,7 @@
             [disabled]="prec_disable"
             >
           </ng-select>
-        </div>
+        </div> -->
         <div class="col-md-2 no-preceptor text-center">
           <label for="preceptor900number">&nbsp;</label>
           <div class="btn-group btn-group-toggle" ngbRadioGroup >
@@ -118,7 +119,7 @@
       <div class="row review">
         <div class="col-md-7 form-group">
           <label for="comments">Comments</label>
-          <textarea class="form-control" id="comments" rows="2"></textarea>
+          <textarea class="form-control" id="comments" name="qa_comments" [(ngModel)]="qa.comments" rows="2"></textarea>
         </div>
         <div class="col col-md-3 text-center">
           <div class="row">
