--- a/angular/src/app/newQA/newQA.component.html
+++ b/angular/src/app/newQA/newQA.component.html
@@ -1,4 +1,4 @@
-<form name="qa_form" autocomplete="off" novalidate>
+<form name="qa_form" autocomplete="off"  novalidate>
     <div class="container">
       <h4>Call information</h4>
       <div class="row">
@@ -92,7 +92,7 @@
          <span class="cssload-slice"></span>
        </div>
        <div *ngIf="formReady">
-         <div *ngFor="let cat of qs">
+         <div *ngFor="let cat of qs; index as c">
            <h4>{{cat.name}}</h4>
            <div class="row affirmative">
              <div class="col-md-12">
@@ -106,7 +106,8 @@
                    </div>
                  </div>
                  <div class="col-sm-2 col-4 question-answer">
-                   <div [ngSwitch]="q.displayNA" class="btn-group btn-group-toggle" ngbRadioGroup name="yn1" [(ngModel)]="qa.yn1">
+                   {{(c * cat.questions.length) + i }}
+                   <div [ngSwitch]="q.displayNA" class="btn-group btn-group-toggle" ngbRadioGroup name="qa.questions_{{cat}}_{{i}}" [(ngModel)]="qa.questions[i].response">
                      <label ngbButtonLabel class="btn-secondary">
                        <input ngbButton type="radio" [value]="1"> Yes
                      </label>
@@ -114,7 +115,7 @@
                        <input ngbButton type="radio" [value]="0"> No
                      </label>
                      <label *ngSwitchCase="1" ngbButtonLabel class="btn-secondary">
-                       <input ngbButton type="radio" [value]="0"> N/A
+                       <input ngbButton type="radio" [value]="2"> N/A
                      </label>
                    </div>
                  </div>
