--- a/angular/src/app/settings/settings.component.html
+++ b/angular/src/app/settings/settings.component.html
@@ -127,5 +127,145 @@
         </div>
       </div>
     </div>
+    <!-- END OF ADD USER -->
+    <!-- EDIT USER -->
+
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            Edit User
+          </div>
+          <div class="card-body">
+            <form name="edit_user" autocomplete="off" novalidate>
+              <h5 class="card-title">Select user</h5>
+              <p class="card-text">Choose from the dropdown or type to search</p>
+              <div class="row">
+                <div class="form-group col-md-12">
+                  <label for="typeahead-focus">User:</label>
+                    <ng-select
+                      name="user_list"
+                      [items]="user_list"
+                      bindLabel="first_last"
+                      bindValue="user_id"
+                      [(ngModel)]="selected_user"
+                      (change)="onUserSelected($event)"
+                      >
+                    </ng-select>
+                </div>
+              </div>
+              <h5 class="card-title">User information</h5>
+              <div *ngIf="show_details">
+                <p class="card-text">Fill out for user personal information.</p>
+                    <div class="row">
+                      <div class="form-group col-md-12">
+                        <label for="prid">First Name</label>
+                        <input type="text" class="form-control" [(ngModel)]="user_data[0].first" name="userdata_first" id="userdata_first">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="form-group col-md-12">
+                        <label for="prid">Last Name</label>
+                        <input type="text" class="form-control" [(ngModel)]="user_data[0].last" name="userdata_last" id="user_last" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="form-group col-md-12">
+                        <label for="prid">900 Number</label>
+                        <input type="text" class="form-control" [(ngModel)]="user_data[0].ninehundred" name="userdata_nine" id="user_nine" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="form-group col-md-12">
+                        <label for="prid">Email</label>
+                        <input type="email" class="form-control" [(ngModel)]="user_data[0].email" name="userdata_email" id="user_email" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                      </div>
+                    </div>
+                    <h5 class="card-title">Account information</h5>
+                    <p class="card-text">Set the user&rsquo;s account information here</p>
+                    <div class="row">
+                      <div class="form-group col-md-12">
+                        <label for="prid">Username</label>
+                        <input disabled type="text" class="form-control" [(ngModel)]="user_data[0].username" name="datausername" id="username" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="form-group col-md-12">
+                        <label for="prid">Password</label>
+                        <input type="password" class="form-control" [(ngModel)]="user_data[0].password_new" name="datapass_og" id="datapass_og" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="form-group col-md-12">
+                        <label for="prid">Confirm Password</label>
+                        <input type="password" class="form-control" [(ngModel)]="user_data[0].pass_conf" name="datapass_conf" id="pass_conf" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                      </div>
+                    </div>
+                    <h5 class="card-title">User Roles and Permissions</h5>
+                    <p class="card-text">Set the user&rsquo;s account permissions</p>
+                    <div class="row question">
+                      <div class="col-sm-6 col-7 question-text">
+                        <div class="form-check form-check-inline">
+                          <label class="form-check-label">Is this user an administrator?</label>
+                        </div>
+                      </div>
+                      <div class="col-sm-2 col-4 question-answer">
+                        <div class="btn-group btn-group-toggle" ngbRadioGroup name="userdata_admin" [(ngModel)]="user_data[0].admin">
+                          <label ngbButtonLabel class="btn-secondary">
+                            <input ngbButton type="radio" [value]="1"> Yes
+                          </label>
+                          <label ngbButtonLabel class="btn-secondary">
+                            <input ngbButton type="radio" [value]="0"> No
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row question">
+                      <div class="col-sm-6 col-7 question-text">
+                        <div class="form-check form-check-inline">
+                          <label class="form-check-label">Does this user do QA?</label>
+                        </div>
+                      </div>
+                      <div class="col-sm-2 col-4 question-answer">
+                        <div class="btn-group btn-group-toggle" ngbRadioGroup name="userdata_qa" [(ngModel)]="user_data[0].qa">
+                          <label ngbButtonLabel class="btn-secondary">
+                            <input ngbButton type="radio" [value]="1"> Yes
+                          </label>
+                          <label ngbButtonLabel class="btn-secondary">
+                            <input ngbButton type="radio" [value]="0"> No
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row question">
+                      <div class="col-sm-6 col-7 question-text">
+                        <div class="form-check form-check-inline">
+                          <label class="form-check-label">Is this user a trainer?</label>
+                        </div>
+                      </div>
+                      <div class="col-sm-2 col-4 question-answer">
+                        <div class="btn-group btn-group-toggle" ngbRadioGroup name="userdata_prec" [(ngModel)]="user_data[0].preceptor">
+                          <label ngbButtonLabel class="btn-secondary">
+                            <input ngbButton type="radio" [value]="1"> Yes
+                          </label>
+                          <label ngbButtonLabel class="btn-secondary">
+                            <input ngbButton type="radio" [value]="0"> No
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+
+            </form>
+          </div>
+          <div class="col col-md-2 form-group text-center pull-right">
+            <label>&nbsp;</label>
+            <button type="submit" class="btn btn-success btn-lg" (click)="addUser()" id="submit">Submit</button>
+          </div>
+        </div>
+      </div>
   </div>
+
+
+
+
 </div>
