--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,4 +1,5 @@
 <header-component></header-component>
+<alert></alert>
 <router-outlet></router-outlet>
 <footer-component></footer-component>
 <!-- <app-messages></app-messages> -->
