remove references to RPIA

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -1,18 +1,18 @@
 <div class="head">
   <div class="container-fluid masthead">
-  <div class="row">
-    <div class="col-md-12 head">
-      <img src="assets/img/patch.svg" alt="">
-      <h2><strong>Aqua</strong> | The <strong>A</strong>mbulance <strong>Qu</strong>ality <strong>A</strong>ssurance System</h2>
+    <div class="row">
+      <div class="col-md-12 head">
+        <img src="assets/img/logo.svg" alt="">
+        <h2><strong>Aqua</strong> | The <strong>A</strong>mbulance <strong>Qu</strong>ality <strong>A</strong>ssurance System</h2>
+      </div>
     </div>
   </div>
-</div>
-<div class="container">
-  <nav class="nav nav-fill nav-pills">
-    <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
-    <a class="nav-item nav-link" routerLink="/new-qa" routerLinkActive="active">New QA</a>
-    <a class="nav-item nav-link" routerLink="/settings" routerLinkActive="active">Settings</a>
-    <!-- <label>Light</label><ui-switch></ui-switch><label>Dark</label> -->
-  </nav>
-</div>
+  <div class="container">
+    <nav class="nav nav-fill nav-pills">
+      <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+      <a class="nav-item nav-link" routerLink="/new-qa" routerLinkActive="active">New QA</a>
+      <a class="nav-item nav-link" routerLink="/settings" routerLinkActive="active">Settings</a>
+      <!-- <label>Light</label><ui-switch></ui-switch><label>Dark</label> -->
+    </nav>
+  </div>
 </div>
